fix: z-index
Fix the z-index on the nav to prevent it overlapping the modal.

--- a/common/common.scss
+++ b/common/common.scss
@@ -462,7 +462,7 @@ a.curriculum-nav:focus {
     background-color: $--gray90;
   }
   .site-nav {
-    z-index: 10000;
+    z-index: 1200;
     width: 210px;
     background-color: none;
     left: 50%;
